Refactor sbt plugin