@@ -1,10 +1,10 @@
-import microsites._
-import sbtorgpolicies.OrgPoliciesPlugin.autoImport._
-import sbtorgpolicies.model._
-import sbtorgpolicies.runnable.syntax._
-import sbtorgpolicies.templates._
-import sbtorgpolicies.templates.badges._
-import scoverage.ScoverageKeys
+onLoad in Global := { s =>
+  "dependencyUpdates" :: s
+}
+
+pgpPassphrase := Some(getEnvVar("PGP_PASSPHRASE").getOrElse("").toCharArray)
+pgpPublicRing := file(s"$gpgFolder/pubring.gpg")
+pgpSecretRing := file(s"$gpgFolder/secring.gpg")
 
 lazy val root = project
   .in(file("."))
@@ -18,139 +18,9 @@ lazy val docs = project
   .dependsOn(root)
   .settings(moduleName := "sbt-compendium-docs")
   .settings(commonSettings)
-  .settings(sbtMicrositesSettings)
   .settings(noPublishSettings)
   .settings(tutSettings)
   .settings(
-    micrositeName := "sbt-compendium",
-    micrositeDescription := "Schema transformations",
-    micrositeBaseUrl := "/sbt-compendium",
-    micrositeGithubOwner := "higherkindness",
-    micrositeGithubRepo := "sbt-compendium",
-    micrositeHighlightTheme := "tomorrow",
-    includeFilter in Jekyll := "*.html" | "*.css" | "*.png" | "*.jpg" | "*.gif" | "*.js" | "*.swf" | "*.md",
-    micrositePushSiteWith := GitHub4s,
-    micrositeExtraMdFiles := Map(
-      file("README.md") -> ExtraMdFileConfig(
-        "index.md",
-        "home",
-        Map("title" -> "Home", "section" -> "home", "position" -> "0")
-      ),
-      file("CHANGELOG.md") -> ExtraMdFileConfig(
-        "changelog.md",
-        "home",
-        Map("title" -> "changelog", "section" -> "changelog", "position" -> "99")
-      )
-    )
+    micrositeSettings
   )
   .enablePlugins(MicrositesPlugin)
-
-// check for library updates whenever the project is [re]load
-onLoad in Global := { s =>
-  "dependencyUpdates" :: s
-}
-
-pgpPassphrase := Some(getEnvVar("PGP_PASSPHRASE").getOrElse("").toCharArray)
-pgpPublicRing := file(s"$gpgFolder/pubring.gpg")
-pgpSecretRing := file(s"$gpgFolder/secring.gpg")
-
-// General Settings
-lazy val commonSettings = Seq(
-  name := "sbt-compendium",
-  orgGithubSetting := GitHubSettings(
-    organization = "higherkindness",
-    project = (name in LocalRootProject).value,
-    organizationName = "47 Degrees",
-    groupId = "io.higherkindness",
-    organizationHomePage = url("http://47deg.com"),
-    organizationEmail = "hello@47deg.com"
-  ),
-  scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-    Seq(
-      "-Xmx1024M",
-      "-XX:ReservedCodeCacheSize=256m",
-      "-XX:+UseConcMarkSweepGC",
-      "-Dplugin.version=" + version.value,
-      "-Dscala.version=" + scalaVersion.value
-    )
-  },
-  scriptedBufferLog := false,
-  scalaVersion := "2.12.8",
-  crossScalaVersions := Seq(scalaVersion.value),
-  startYear := Some(2018),
-  ThisBuild / scalacOptions -= "-Xplugin-require:macroparadise",
-  libraryDependencies ++= Seq(
-    %%("cats-core", V.cats),
-    %%("hammock-core", V.hammock),
-    "com.pepegar" %% "hammock-circe" % V.hammock,
-    "com.pepegar" %% "hammock-asynchttpclient" % V.hammock,
-    %%("specs2-core"      , V.specs2)       % Test,
-    %%("specs2-scalacheck", V.specs2) % Test,
-    "com.beachape" %% "enumeratum" % V.enumeratum,
-    "io.chrisdavenport"     %% "cats-scalacheck" % V.catsScalacheck % Test excludeAll(
-      ExclusionRule(organization="org.scalacheck")
-      )
-  ),
-  orgProjectName := "sbt-compendium",
-  orgUpdateDocFilesSetting += baseDirectory.value / "readme",
-  orgMaintainersSetting := List(Dev("developer47deg", Some("47 Degrees (twitter: @47deg)"), Some("hello@47deg.com"))),
-  orgBadgeListSetting := List(
-    TravisBadge.apply,
-    CodecovBadge.apply, { info =>
-      MavenCentralBadge.apply(info.copy(libName = "sbt-compendium"))
-    },
-    ScalaLangBadge.apply,
-    LicenseBadge.apply, { info =>
-      GitterBadge.apply(info.copy(owner = "higherkindness", repo = "sbt-compendium"))
-    },
-    GitHubIssuesBadge.apply
-  ),
-  orgEnforcedFilesSetting := List(
-    LicenseFileType(orgGithubSetting.value, orgLicenseSetting.value, startYear.value),
-    ContributingFileType(
-      orgProjectName.value,
-      // Organization field can be configured with default value if we migrate it to the frees-io organization
-      orgGithubSetting.value.copy(organization = "higherkindness", project = "sbt-compendium")
-    ),
-    AuthorsFileType(name.value, orgGithubSetting.value, orgMaintainersSetting.value, orgContributorsSetting.value),
-    NoticeFileType(orgProjectName.value, orgGithubSetting.value, orgLicenseSetting.value, startYear.value),
-    VersionSbtFileType,
-    ChangelogFileType,
-    ReadmeFileType(
-      orgProjectName.value,
-      orgGithubSetting.value,
-      startYear.value,
-      orgLicenseSetting.value,
-      orgCommitBranchSetting.value,
-      sbtPlugin.value,
-      name.value,
-      version.value,
-      scalaBinaryVersion.value,
-      sbtBinaryVersion.value,
-      orgSupportedScalaJSVersion.value,
-      orgBadgeListSetting.value
-    ),
-    ScalafmtFileType,
-    TravisFileType(crossScalaVersions.value, orgScriptCICommandKey, orgAfterCISuccessCommandKey)
-  ),
-  orgScriptTaskListSetting := List(
-    (clean in Global).asRunnableItemFull,
-    (compile in Compile).asRunnableItemFull,
-    (test in Test).asRunnableItemFull,
-    "docs/tut".asRunnableItem
-  )
-) ++ compilerPlugins
-
-lazy val tutSettings = Seq(
-  scalacOptions in Tut ~= filterConsoleScalacOptions,
-  scalacOptions ~= (_ filterNot Set("-Xfatal-warnings", "-Ywarn-unused-import", "-Xlint").contains),
-  scalacOptions in Tut += "-language:postfixOps"
-)
-
-lazy val compilerPlugins = Seq(
-  libraryDependencies ++= Seq(
-    compilerPlugin("org.spire-math"  % "kind-projector"      % V.kindProjector cross CrossVersion.binary),
-    compilerPlugin("com.olegpy"      %% "better-monadic-for" % V.betterMonadicFor),
-    compilerPlugin("org.scalamacros" % "paradise"            % V.macroParadise cross CrossVersion.patch)
-  )
-)
